# Google_Game_ranking_analysis_system

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: daily-collect.yml  weekly-meta-report.yml
dashboard/: app.py
data/: ranking_2026-06-25.csv  ranking_2026-06-28_1957.csv  ranking_2026-06-29_2154.csv  ranking_2026-06-30_0705.csv  ranking_2026-06-30_2036.csv  ranking_2026-07-01_0711.csv
reports/: 2026-06-25.md  2026-06-28_1957.md  2026-06-29_2154.md  2026-06-30_0705.md  2026-06-30_2036.md  2026-07-01_0711.md  weekly_meta_report_latest.md
scripts/: collect_reviews.mjs  export_top100.mjs  export_xlsx.py  generate_weekly_report.py  import_reviews.py  install_local_sync_task.ps1  sync_reports.ps1
src/game_collector/: __init__.py  analysis.py  cli.py  collector.py  database.py  insights.py  models.py  report.py  reviews.py
tests/: test_analysis.py  test_database.py  test_insights.py  test_reviews.py
